--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -1,13 +1,23 @@
 \chapter{引言}
 \label{cha:intro}
 
-等离子体激发器由于具有响应时间短，安装方便，耗能低，器件小等众多优点，近些年得到了流动控制领域研究者们的青睐。本文主要研究了介质阻挡放电（dielectric barrier discharge，DBD）等离子体激发器在湍流减阻方面的应用。研究主要分为两个部分，分别是通过推迟转捩降低阻力和通过改变充分发展湍流的相干结构降低阻力。引言部分将会先介绍我们所采用的等离子体激发器，然后再分别综述这两种控制方法的研究现状。
+为了配合我国大型客机发展的战略需求，帮助新一代自主研制客机在节能减排绿色环保的道路上顺利前进，研究边界层减阻相关技术至关重要。对于大型民用客机，摩擦阻力几乎占到了总阻力的一半\cite{Schrauf2005}。而这些摩擦阻力又主要由机身和机翼贡献。就机翼而言，其流向长度不大，将层流向湍流转捩的过程推迟的层流技术，非常有应用前景\cite{Joslin1998}。但是对于机身，其流向尺度过大，机身中后段边界层已经无可避免的发展为湍流，这个时候层流技术毫无用武之地，必须使用通过改变充分发展湍流中拟序结构降低湍流阻力的方法。针对这两种完全不同的情况，本文将其抽象为两个分别与之对应的科学问题进行研究。关于机翼减阻的问题，本文将其简化为三维边界层层流-湍流转捩推迟问题。关于机身上减阻的问题，本文将其抽象成充分发展槽道壁湍流减阻控制问题。
+\begin{figure}[htb]
+  \centering
+  \includegraphics[width=0.8\textwidth]{ch1/Schrauf2005.jpg}
+  \caption{大型客机阻力分解\cite{Schrauf2005}}\label{f:Schrauf2005}
+\end{figure}
+
+为了完成减阻的目标，本文以介质阻挡放电（DBD）等离子体激发器作为控制装置。这种激发器由于有响应时间短，安装方便，耗能低，器件小等众多优点，近些年得到了流动控制领域研究者们的青睐。在引言的第一节，本文先简要的介绍一下这种控制装置、其数值模拟方法与其在流动控制中的应用。在随后的两节里分别介绍后掠翼转捩推迟与壁湍流流动控制的研究现状。
 
 
 \section{介质阻挡放电等离子体激发器}
 
 等离子体是除了液态、固态以及气态之外的物质第四态\cite{zhangguling2008,niewanshang2012}。等离子体可由高温或者强电场产生。高温条件下气体会离解产生等离子体。在电场力的作用下气体也会电离产生等离子体，电离产生的等离子体通常由大量的电子和相应成对出现的离子构成。在电场的作用下，等离子体可以表现出明显的集体行为
-\cite{wuhong2015}。在本文中，主要是用的介质阻挡放电等离子体激发器。这种激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离。在电场的作用下，带电的离子会做定向运动，并通过与不带电的空气分子的碰撞作用，将动量转移到空气分子上。从宏观的角度看，等离子体激发器在开启时会产生图示方向的射流。介质阻挡放电等离子体激发器的出现最早可以追溯到1979年\cite{Masuda1979}。在1998年，Roth首次将其用于流动控制\cite{Roth1998}。由于本文主要是采用数值模拟的方法研究这种激发器在流动控制中的应用，所以本文将在引言的第一部分重点介绍DBD等离子体激发器的数值模拟方法与将其应用于流动控制的研究现状。
+\cite{wuhong2015}。在本文中，主要是用的介质阻挡放电等离子体激发器。这种激发器由两片电击和一层绝缘层构成（如图~\ref{fig:SchematicPlasma}所示）。当在两片电极上加上高电压时，两片电击之间的空气就会被电离，在介质表面形生成等离子体。这一控制装置相比传统的控制装置有诸多优点\cite{Corke2010}。首先，控制部件的主要构成就是两个电极片和一张绝缘层，非常轻便。其次，其反应速度很快，激励频率可以范围可以很广，在流动控制中可以很方便的避开流动的特征频率。第三，耗能很低，每厘米耗能在0.1瓦特量级。最后，在不需要控制的时候激励器对流动完全没有影响。
+
+
+在电场的作用下，带电的离子会做定向运动，并通过与不带电的空气分子的碰撞作用，将动量转移到空气分子上。从宏观的角度看，等离子体激发器在开启时会产生图示方向的射流。由于本文主要是采用数值模拟的方法研究这种激发器在流动控制中的应用，所以本文将在引言的第一部分重点介绍DBD等离子体激发器的数值模拟方法与将其应用于流动控制的研究现状。
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{plasma}
@@ -54,14 +64,14 @@ Suzen
 验证了等离子体气动激励器的推力与施加在电极两端的电压成
 
 \subsection{介质阻挡放电等离子体激发器在流动控制方面的应用}
-介质阻挡放电等离子体激发器在流动控制方面的应用
+介质阻挡放电等离子体激发器的出现最早可以追溯到1979年\cite{Masuda1979}。在1998年，Roth首次将其用于流动控制\cite{Roth1998}。
 \section{通过推迟层流/湍流转捩减阻}
 \label{sec:first}
 众所周知，层流的摩擦阻力要比湍流的摩擦阻力小很多，所以流动减阻的一个重要方向就是扩大飞行器表面的层流范围。对于大型客机而言，由于机身长度过长，转捩总会无可避免的发生。相比之下，在机翼上发展和应用层流技术则有很大的前景。目前大多数客机使用的机翼还都是湍流机翼。湍流机翼发生从层流向湍流的转捩点一般在翼型弦长的10\%以前，而如果使用推迟转捩的层流技术，可以将转捩点推迟到20\%甚至70\%弦长之后。在这一小节，我们先简要介绍二维和三维边界层的失稳与转捩研究现状，最后再总结目前已经提出的转捩推迟手段。
 
 \subsection{二维边界层失稳与转捩}
-边界层转捩过程强烈依赖于来流条件和壁面条件，受到来流湍流度、来流马赫数、外流压力梯度、壁面温度、壁面粗糙度、壁面抽吸量及外部扰动特征参数等诸多因素的影响\ref{morkovin1969many}，因此存在着多种物理机制。
-在二维不可压缩边界层中，转捩过程可分为以下三种类型：当来流湍流度较低（小于0.1\%）时发生的是自然转捩（natural transition）\ref{papanastasiou1999viscous}；而来流湍流度较高（大于1\%）时，转捩过程中小扰动的指数增长阶段将被跳过，这被称为跨越转捩（bypass transition）\ref{jacobs2001simulations}；逆压梯度会导致层流边界层与壁面分离，从而引发分离流转捩（separation-induced transition）\ref{malkiel1995transition}；反过来，顺压梯度会使湍流边界层再层流化\ref{walker1992role}。具体地，自然转捩过程分为四个阶段\ref{bradshaw1994turbulence}：第一阶段是所谓的边界层感受性过程（Receptivity）\ref{reshotko1984environment}，指的是背景扰动如何进入边界层并产生不稳定波的机制；第二阶段是不稳定波的线性增长过程；第三阶段是不稳定波发展的非线性阶段，不稳定波发展到一定的幅值后，会出现波的相互作用和高阶不稳定性，从而导致以湍斑为特征的湍流结构的产生；最后一个阶段是从湍斑到完全湍流的发展过程。在自然转捩的第二阶段，扰动幅值相比于基本流非常小，一般采用线性稳定性理论进行描述。该理论假设扰动具有行波的形式，且不同频率，不同波长的扰动波之间不会互相干扰。基于这一假设，我们可以得到线性稳定性方程（Orr-Sommerfeld方程）[9]，并且得到不同频率和波长的扰动波的衰减或增长的情况，如图\ref{f:neutral_curve}所示。在此 图上，扰动的衰减（稳定）区和放大（不稳定）区可通过的扰动增长率等于零的线区分出来，这条线被称为中性稳定性曲线。令人特别关注的是曲线上 取最小值的点：小于此值的区域内，所有的扰动均会趋于稳定。这个最小的雷诺数被称为临界雷诺数。可见，速度剖面有拐点的边界层比没有的更不稳定，而且后者在 时仍存在不稳定频带，因此也被称为具有“无粘不稳定性”的剖面。实际上，上述频带可通过求解Rayleigh方程[10]得到，此方程是Orr-Sommerfeld方程在 时的简化形式，基于此方程的理论被称为“无粘稳定性理论”。无粘稳定性理论中的拐点定理指出拐点的存在是流动失稳的充分必要条件。
+边界层转捩过程强烈依赖于来流条件和壁面条件，受到来流湍流度、来流马赫数、外流压力梯度、壁面温度、壁面粗糙度、壁面抽吸量及外部扰动特征参数等诸多因素的影响\cite{morkovin1969many}，因此存在着多种物理机制。
+在二维不可压缩边界层中，转捩过程可分为以下三种类型：当来流湍流度较低（小于0.1\%）时发生的是自然转捩（natural transition）\cite{papanastasiou1999viscous}；而来流湍流度较高（大于1\%）时，转捩过程中小扰动的指数增长阶段将被跳过，这被称为跨越转捩（bypass transition）\cite{jacobs2001simulations}；逆压梯度会导致层流边界层与壁面分离，从而引发分离流转捩（separation-induced transition）\cite{malkiel1995transition}；反过来，顺压梯度会使湍流边界层再层流化\cite{walker1992role}。具体地，自然转捩过程分为四个阶段\cite{bradshaw1994turbulence}：第一阶段是所谓的边界层感受性过程（Receptivity）\cite{reshotko1984environment}，指的是背景扰动如何进入边界层并产生不稳定波的机制；第二阶段是不稳定波的线性增长过程；第三阶段是不稳定波发展的非线性阶段，不稳定波发展到一定的幅值后，会出现波的相互作用和高阶不稳定性，从而导致以湍斑为特征的湍流结构的产生；最后一个阶段是从湍斑到完全湍流的发展过程。在自然转捩的第二阶段，扰动幅值相比于基本流非常小，一般采用线性稳定性理论进行描述。该理论假设扰动具有行波的形式，且不同频率，不同波长的扰动波之间不会互相干扰。基于这一假设，我们可以得到线性稳定性方程（Orr-Sommerfeld方程）[9]，并且得到不同频率和波长的扰动波的衰减或增长的情况，如图\ref{f:neutral_curve}所示。在此 图上，扰动的衰减（稳定）区和放大（不稳定）区可通过的扰动增长率等于零的线区分出来，这条线被称为中性稳定性曲线。令人特别关注的是曲线上 取最小值的点：小于此值的区域内，所有的扰动均会趋于稳定。这个最小的雷诺数被称为临界雷诺数。可见，速度剖面有拐点的边界层比没有的更不稳定，而且后者在 时仍存在不稳定频带，因此也被称为具有“无粘不稳定性”的剖面。实际上，上述频带可通过求解Rayleigh方程[10]得到，此方程是Orr-Sommerfeld方程在 时的简化形式，基于此方程的理论被称为“无粘稳定性理论”。无粘稳定性理论中的拐点定理指出拐点的存在是流动失稳的充分必要条件。
 \begin{figure}
   \centering
   \includegraphics[width=0.5\textwidth]{neutral_curve}
