--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -1231,3 +1231,82 @@ type = {Conference Proceedings},
    year = {2015},
    type = {Journal Article}
 }
+@techreport{Joslin1992,
+   author = {Joslin, Ronald D and Streett, Craig L and Chang, Chau-Lyan},
+   title = {Validation of three-dimensional incompressible spatial direct numerical simulation code: a comparison with linear stability and parabolic stability equation theories for boundary-layer transition on a flat plate},
+   year = {1992},
+   type = {Report}
+}
+@techreport{Dagenhart1999,
+   author = {Dagenhart, JR and Saric, William S},
+   title = {Crossflow stability and transition experiments in swept-wing flow},
+   year = {1999},
+   type = {Report}
+}
+@article{Zhu2016,
+   author = {H. Zhu and S. Fu and L. Shi and Wang, Z. J.},
+   title = {Implicit Large-Eddy Simulation for the High-Order Flux Reconstruction Method},
+   journal = {AIAA Journal},
+   volume = {54},
+   number = {9},
+   pages = {2721-2733},
+   ISSN = {0001-1452},
+   DOI = {10.2514/1.J054826},
+   url = {https://doi.org/10.2514/1.J054826},
+   year = {2016},
+   type = {Journal Article}
+}
+@article{Zh2017,
+   author = {Zhu, Hui and Fu, Song},
+   title = {Forward-facing steps induced transition in a subsonic boundary layer},
+   journal = {Science China Physics, Mechanics \& Astronomy},
+   volume = {60},
+   number = {10},
+   pages = {104712},
+   abstract = {A forward-facing step (FFS) immersed in a subsonic boundary layer is studied through a high-order flux reconstruction (FR) method to highlight the flow transition induced by the step. The step height is a third of the local boundary-layer thickness. The Reynolds number based on the step height is 720. Inlet disturbances are introduced giving rise to streamwise vortices upstream of the step. It is observed that these small-scale streamwise structures interact with the step and hairpin vortices are quickly developed after the step leading to flow transition in the boundary layer.},
+   ISSN = {1869-1927},
+   DOI = {10.1007/s11433-017-9069-3},
+   url = {https://doi.org/10.1007/s11433-017-9069-3},
+   year = {2017},
+   type = {Journal Article}
+}
+@article{Kim1987,
+   author = {Kim, John and Moin, Parviz and Moser, Robert},
+   title = {Turbulence statistics in fully developed channel flow at low Reynolds number},
+   journal = {Journal of fluid mechanics},
+   volume = {177},
+   pages = {133-166},
+   ISSN = {1469-7645},
+   year = {1987},
+   type = {Journal Article}
+}
+@article{liquan2013,
+  title={民用飞机自然层流机翼研究进展},
+  author={李权 and 段卓毅 and 张彦军 and 雷武涛 and 许瑞飞},
+  journal={航空工程进展},
+  volume={4},
+  number={4},
+  pages={399--406},
+  year={2013}
+}
+@article{Joslin1998,
+   author = {Joslin, Ronald D},
+   title = {Aircraft Laminar Flow Control},
+   journal = {Annual review of fluid mechanics},
+   volume = {30},
+   number = {1},
+   pages = {1-29},
+   ISSN = {0066-4189},
+   year = {1998},
+   type = {Journal Article}
+}
+@article{Corke2010,
+   author = {Corke, Thomas C and Enloe, C Lon and Wilkinson, Stephen P},
+   title = {Dielectric barrier discharge plasma actuators for flow control},
+   journal = {Annual review of fluid mechanics},
+   volume = {42},
+   pages = {505-529},
+   ISSN = {0066-4189},
+   year = {2010},
+   type = {Journal Article}
+}
